Update main.ipynb file

--- a/main.ipynb
+++ b/main.ipynb
@@ -229,7 +229,7 @@
     }
    ],
    "source": [
-    "create_histogram(top_50_df, column='PCP', img_save_path='data/histogram.png', show_image= True)\n"
+    "create_histogram(top_50_df, column='PCP', img_save_path='data/histogram.png')\n"
    ]
   },
   {
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "create_scatter_plot(top_50_df, x_col='PUB', y_col=\"Award\", img_save_path='data/scatter_plot.png', show_image= True)"
+    "create_scatter_plot(top_50_df, x_col='PUB', y_col=\"Award\", img_save_path='data/scatter_plot.png')"
    ]
   },
   {
@@ -288,7 +288,7 @@
     }
    ],
    "source": [
-    "correlation_matrix(top_50_df, img_save_path='data/correlation_matrix.png', show_image= True)"
+    "correlation_matrix(top_50_df, img_save_path='data/correlation_matrix.png')"
    ]
   },
   {
